--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:mocha": "nyc --all --include models --include services --include controllers mocha test/unit/**/*.js --exit",
     "start": "node index.js",
     "debug": "nodemon index.js",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
+    "nodemon": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -36,8 +37,8 @@
     "eslint-config-trybe-backend": "^1.0.3",
     "mocha": "^8.4.0",
     "mysql-import": "^5.0.21",
+    "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.1",
-    "nodemon": "^2.0.4"
+    "sinon": "^11.1.1"
   }
 }
